--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -71,9 +71,9 @@ breaklinks=true,
 
 \numberofauthors{1}
  \author{
-   \alignauthor Max Van Kleek, Daniel A. Smith, Heather R. Packer, James Skinner, Nigel R. Shadbolt \\
+   \alignauthor Max Van Kleek, Daniel A. Smith, Heather R. Packer, Jim Skinner, Nigel R. Shadbolt \\
      \affaddr{School of Electronics and Computer Science}\\
-     \affaddr{University of Southampton, Southampton UK}\\
+     \affaddr{University of Southampton, Southampton, UK}\\
      \email{\{emax, ds, hp3, js40g09, nrs\}@ecs.soton.ac.uk}}
 
 % Teaser figure can go here
@@ -87,7 +87,7 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-The information processing capabilities of humans enable us to opportunistically draw evidence from available information sources to carry out tasks effectively.  However, in the digital realm, serendipitously combining structured data from different sources without prior careful alignment or integration remains difficult due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to more effectively and routinely take advantage of the vast emerging ecosystems of structured data on the Web.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
+The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 
 
 % While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor. In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web. We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
