--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -71,7 +71,7 @@ breaklinks=true,
 
 \numberofauthors{1}
  \author{
-   \alignauthor Max Van Kleek, Daniel A. Smith, Heather R. Packer, Jim Skinner, Nigel R. Shadbolt \\
+   \alignauthor Max Van Kleek, Daniel A. Smith, Heather S. Packer, Jim Skinner, Nigel R. Shadbolt \\
      \affaddr{School of Electronics and Computer Science}\\
      \affaddr{University of Southampton, Southampton, UK}\\
      \email{\{emax, ds, hp3, js40g09, nrs\}@ecs.soton.ac.uk}}
