--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -13,6 +13,11 @@
 %Copyright 2012 ACM 978-1-4503-1015-4/12/05...\$10.00.
 %}
 
+\toappear{
+Permission to make digital or hard copies of all or part of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. To copy otherwise, or republish, to post on servers or to redistribute to lists, requires prior specific permission and/or a fee.\\
+\emph{CHI 2013}, April 27--May 2, 2013, Paris, France.\\
+Copyright 2013 ACM 978-1-4503-1899-0/13/04...\$15.00.}
+
 % Arabic page numbers for submission. 
 % Remove this line to eliminate page numbers for the camera ready copy
 %\pagenumbering{arabic}
@@ -87,9 +92,8 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
-
-
+The information processing capabilities of humans enable us to opportunistically draw and integrate knowledge from nearly any information sources that become available.  However, enabling similar, opportunistic integration of digital, structured data from diverse sources has remained difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled separately and differently are brought together.  In this paper, we present an investigation of the feasibility of extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants understood the new interaction mechanisms introduced, and, second, that they made more carefully-justified decisions weighing a greater number of factors, while spending less effort and taking the same amount of time, during subjective-choice tasks when using DataPalette than a control (web page and spreadsheet) interface. 
+%The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 % While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor. In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web. We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 
 %% While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
@@ -109,20 +113,17 @@ The information processing capabilities of humans enable people to opportunistic
 \terms{Human Factors; Design; Measurement.}
 
 \section{Introduction}
+In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  This explosion of structured personal data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as a number of entirely new kinds of sources such as wearable activity and bio-sensors.  Perhaps even more significantly, governmental departments and authorities, from the smallest local councils to entire federal departments, have started to release large quantities of data as a way to provide transparency and accountability to citizens.  A common goal for the release of this data, however, has been to provide end-user citizens an ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other ``data specialists'' to perform ``one-off'' data analyses and investigations, but has remained inaccessible to citizens because of a lack of suitable tools with which these data sets can be easily manipulated and explored.  For example, the most familiar kinds of personal information management (PIM) tools only provide facilities for managing small, fixed sets of data types (such as digital calendaring tools and to-do list managers) or provide little or no support for structured data at all, such as text editors and sketching/drawing tools \cite{infoscraps}.   
 
-In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  This information has emerged from many channels, from the APIs now offered by most of the major retailers, apps, and social media sites, to the massive publishing of datasets by governmental and other institutions, to even the emergence of new kinds of data sources, such as wearable and smartphone-based bio-sensors.  A primary goal of making much of this data available has been to give end-user citizens the ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  This data is predominately used by specialised app developers, journalists and other ``data specialists'' but remains inaccessible to citizens because of the available tools.  For example, the most commonly used structured personal information management (PIM) tools either manage a small, fixed set of data types (such as digital calendaring tools and  to-do list managers) or provide little or no support for structured data at all, such as text editors and sketching/drawing tools \cite{infoscraps}.   
-
-We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. In this paper, we present an investigation into extending PIM tools to effectively use emerging ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach: first, we performed a qualitative analysis of a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people rely on multiple and diverse sources, then singular, integrated ones for a number of reasons, including coverage, reliability, and for alternative perspectives.  
+We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. In this paper, we present an investigation into extending PIM tools to effectively use emerging ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach: first, we performed a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people routinely drew upon multiple and diverse sources for reasons including coverage, reliability, and to gain multiple perspectives or subjective assessments.  
 
 % Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: address books (contact info), event calendars (events), music (songs/tracks), shopping (product info) social networking (profiles) and weather (forecasts), finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
-Second, we conducted a structural analysis of various popular personal data sources available today to identify potential barriers to unifying data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: contacts, events, music, shopping, social networking and weather, finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
-
+Second, we conducted a structural analysis of data records from personal data sources to identify the most common kinds of problems likely to arise from integrating data from these types of sources.  We examined data sources in six common domains: contacts, events, music, shopping, social networking and weather. Our analysis found that while terminological heterogeneity was the most common issue for unifying simpler data records (such as address book contacts and social network profiles), structural differences were exhibit among more complex schemas, such as online retailers' product catalogues.
 
 Third, we developed DataPalette, an interface that enables serendipitous ``data mixing,'' negating the need for people to write bespoke code to effectively combine and compare heterogenous data.  It was principally designed to support people's data integration needs for data heterogeneity, using observations made from the previous studies.  In particular, we designed a user-centric interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then performed a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we devised, and that this interface effectively improved people's ability to perform multifaceted decision making tasks using multiple sources.
 
 \section{Background}
-
 In this section, we motivate our work using three fields: PIM, data integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, which foregrounded work to consolidate data from multiple sources and which still remains a challenge.  Specifically, reconciling the differences that arise among representations when data is created by different people, at different times, for different purposes. As described by Alon Halevy:
 
 \begin{quote} 
