--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -113,7 +113,7 @@ The information processing capabilities of humans enable us to opportunistically
 \terms{Human Factors; Design; Measurement.}
 
 \section{Introduction}
-In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  This explosion of structured personal data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as a number of entirely new kinds of sources such as wearable activity and bio-sensors.  Perhaps even more significantly, governmental departments and authorities, from the smallest local councils to entire federal departments, have started to release large quantities of data as a way to provide transparency and accountability to citizens.  A common goal for the release of this data, however, has been to provide end-user citizens an ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other ``data specialists'' to perform ``one-off'' data analyses and investigations, but has remained inaccessible to citizens because of a lack of suitable tools with which these data sets can be easily manipulated and explored.  For example, the most familiar kinds of personal information management (PIM) tools only provide facilities for managing small, fixed sets of data types (such as digital calendaring tools and to-do list managers) or provide little or no support for structured data at all, such as text editors and sketching/drawing tools \cite{infoscraps}.   
+In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  The explosion of structured data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as from new kinds sensors and devices such as wearable activity and bio-sensors. In addition to commercial apps and services, governments have embraced open data as a way of providing transparency and accountability to their citizens, causing a huge push to release data at scales ranging from the smallest local councils to entire national departments.  A common goal for the release of such data has been to provide end-user citizens an ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other ``data specialists'' to perform ``one-off'' data analyses and investigations, but has remained inaccessible to citizens because of a lack of suitable tools with which these data sets can be easily manipulated and explored.  For example, the most familiar kinds of personal information management (PIM) tools only provide facilities for managing small, fixed sets of data types (such as digital calendaring tools and to-do list managers) or provide little or no support for structured data at all, such as text editors and sketching/drawing tools \cite{infoscraps}.   
 
 We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. In this paper, we present an investigation into extending PIM tools to effectively use emerging ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach: first, we performed a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people routinely drew upon multiple and diverse sources for reasons including coverage, reliability, and to gain multiple perspectives or subjective assessments.  
 
