--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -117,7 +117,8 @@ In recent years, an unprecedented quantity and variety of information has been m
 
 A common goal for the release of such data has been to provide end-user citizens an ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately been consumed by app developers, journalists and other ``data specialists'' in one-off data analyses, apps and investigations, remaining still far from influencing the activities of ordinary end-user citizens. A core reason for this, we posit, is a lack of suitable tools for accessing and interrogating these heterogeneous data sets, and a means by which these disparate information sources can be effectively brought together and cross-referenced.  For example, most personal information management (PIM) tools only provide facilities for managing small, pre-fixed sets of data types (such as digital calendaring tools and to-do list managers) or provide little or no support for structured data at all, such as text editors and sketching/drawing tools \cite{infoscraps}.   
 
-We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. In this paper, we present an investigation into extending PIM tools to effectively use emerging ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach: first, we performed a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people routinely drew upon multiple and diverse sources for reasons including coverage, reliability, and to gain multiple perspectives or subjective assessments.  
+% We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. 
+In this paper, we present an investigation into ways that PIM tools might be extended to allow data to be brought in in an ad-hoc fashion from any structured data source, combined with other data, and interrogated to effectively allow end-user citizens to harness knowledge from the vast, emerging and future ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach in this investigation: first, we performed a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people routinely drew upon multiple and diverse sources for reasons including coverage, reliability, and to gain multiple perspectives or subjective assessments.  
 
 % Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: address books (contact info), event calendars (events), music (songs/tracks), shopping (product info) social networking (profiles) and weather (forecasts), finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
